@@ -50,6 +50,8 @@ Version 18   Live Server Fixes
 --Added better reporting of server Notices and Warnings which result in
   client-fuddling unexpected responses from server.
 
+--Started working on daily server stats tracking.
+
 
 
 
